ci: osx: run on branches and PRs as well

--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -1,6 +1,10 @@
 name: MacOS Tests
 
 on:
+  push:
+    branches:
+      - master
+  pull_request:
   schedule:
     # Run every day at 11 PM.
     - cron:  '0 23 * * *'
