--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -15,13 +15,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        python-version: ["3.8", "3.9", "3.10"]
         type: ["ethereum_truffle", "ethereum_bench", "ethereum", "ethereum_vm", "wasm", "wasm_sym", "other"]
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.8
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+        python-version: ${{ matrix.python-version }}
     - name: Install NPM
       uses: actions/setup-node@v3
       with:
