--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,8 +50,7 @@ jobs:
         mkdir -p /tmp/boolector
         sudo make DESTDIR=/usr install
         # Install solc unconditionally because it only takes a second or two
-        sudo wget -O /usr/bin/solc https://github.com/ethereum/solidity/releases/download/v0.4.24/solc-static-linux
-        sudo chmod +x /usr/bin/solc
+        solc-select use 0.4.24 --always-install
     - name: Run Tests
       env:
         TEST_TYPE: ${{ matrix.type }}
